Update group names

--- a/project.config
+++ b/project.config
@@ -3,7 +3,7 @@
 [access "refs/*"]
 	owner = group rhosqeauto-contrib
 	owner = group user/Yair Fried (yfried)
-	owner = group user/rhosqeauto
+	owner = group user/rhosqeauto (rhosqeauto)
 	read = group Anonymous Users
 	read = group rhosqeauto-contrib
 	push = deny group Registered Users
@@ -40,7 +40,7 @@
 	label-Code-Review = -1..+1 group rhosqeauto-contrib
 	label-Verified = -1..+1 group rhosqeauto-core
 	label-Verified = -1..+1 group rhosqeauto-stable
-	label-Verified = -1..+1 group user/rhosqeauto
+	label-Verified = -1..+1 group user/rhosqeauto (rhosqeauto)
 	rebase = group rhosqeauto-contrib
 	rebase = group rhosqeauto-core
 	rebase = group rhosqeauto-stable
