[Overcloud] Tag deployed nodes
User might wish to only deploy part of the nodes in the inventory.
This results in unreachable (after introspection) nodes in the inventory
and post-install tasks would fail.

Solution:
* tag all deployed nodes
* apply post-install tasks only to tagged nodes using intersect operator
(&)

Change-Id: Ibe42fa5c2a8a0e08e084be59c88646fb7cb1c14a

--- a/plugins/tripleo-overcloud/post/lbaas_v2.yml
+++ b/plugins/tripleo-overcloud/post/lbaas_v2.yml
@@ -2,7 +2,8 @@
 # OSPD is unable to configure LBaaS, so post-install steps are required.
 # This is LBaaS v2.
 - name: Activate Neutron LBaaS (v2)
-  hosts: controller
+  # avoid undeployed overcloud machines
+  hosts: controller:&deployed
   become: true
   any_errors_fatal: true
   vars:
