--- a/plugins/tripleo-overcloud/create_external_network.yml
+++ b/plugins/tripleo-overcloud/create_external_network.yml
@@ -16,7 +16,7 @@
       - "vars/public/subnet/{{ install.public.subnet }}.yml"
   vars:
       source_dir: "{{ install.deployment.files }}"
-      first_controller: "{{ groups.controller | first }}"
+      first_controller: "{{ groups.controller | intersect(groups.deployed) | first }}"
       network_environment_file: "network-environment{{ (install.network.protocol == 'ipv6') | ternary('-v6','') }}.yaml"
       physnet_name: datacentre
       template_base: "{{ ansible_user_dir }}/{{ source_dir | basename }}"
