--- a/plugins/tripleo-overcloud/post/ssh_between_compute.yml
+++ b/plugins/tripleo-overcloud/post/ssh_between_compute.yml
@@ -4,7 +4,8 @@
 # This is required when a migration needs to work on a non shared storage
 # scenarios.
 - name: Enable SSH communication between compute nodes
-  hosts: compute
+  # Avoid undeployed overcloud machines
+  hosts: compute:&deployed
   become: yes
   tags: enable_compute_ssh
   any_errors_fatal: true
