Register CephMon, CephMds, CephRbdMirror services for controller role
  The controller role of various composable role topologies do not
  have CephMon, CephMds, CephRbdMirror services included which results
  in non-operational setup once Ceph backend is used.
  Remove CephClient which is a compute service

Change-Id: I2089f74521f4b96c6ce05bda66fdcca1ae982e13

--- a/plugins/tripleo-overcloud/files/roles/default/controller.yml
+++ b/plugins/tripleo-overcloud/files/roles/default/controller.yml
@@ -16,8 +16,10 @@ controller_role:
     #  - "{% if install.version |int < 11 %}OS::TripleO::Services::VipHosts{% endif %}"
     services:
         - OS::TripleO::Services::CACerts
-        - OS::TripleO::Services::CephClient
+        - OS::TripleO::Services::CephMds
+        - OS::TripleO::Services::CephMon
         - OS::TripleO::Services::CephExternal
+        - OS::TripleO::Services::CephRbdMirror
         - OS::TripleO::Services::CephRgw
         - OS::TripleO::Services::CinderApi
         - OS::TripleO::Services::CinderBackup
