--- a/plugins/tripleo-overcloud/files/roles/galera-messaging/controller.yml
+++ b/plugins/tripleo-overcloud/files/roles/galera-messaging/controller.yml
@@ -10,8 +10,10 @@ controller_role:
 
     services:
         - OS::TripleO::Services::CACerts
-        - OS::TripleO::Services::CephClient
+        - OS::TripleO::Services::CephMds
+        - OS::TripleO::Services::CephMon
         - OS::TripleO::Services::CephExternal
+        - OS::TripleO::Services::CephRbdMirror
         - OS::TripleO::Services::CephRgw
         - OS::TripleO::Services::CinderApi
         - OS::TripleO::Services::CinderBackup
