rally: Set default value for test.tests variable
The variable is used in run.yml playbook and if not specified playbook
throws an error and fails. Default to none. We need some tests to be
specified.

Change-Id: I800ba30ef679c99a569cc8a011cde3f7721efe27

--- a/plugins/rally/tasks/run.yml
+++ b/plugins/rally/tasks/run.yml
@@ -14,7 +14,7 @@
 
 - name: Copy Task file from vars
   template:
-      src: "vars/tests/{{ test.tests }}.yml"
+      src: "vars/tests/{{ test.tests | default('none') }}.yml"
       dest: "{{ rally.dir }}/{{ test.taskfile }}"
       force: yes
 
