--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,4 @@ PyYAML>=3.11
 netaddr >= 0.7.18
 requests!=2.12.2,!=2.13.0,>=2.10.0
 terminaltables>=3.1.0
+Jinja2>=2.8.0 # avoid exception due to use of 'equalto', like openstack_servers
