--- a/plugins/tripleo-overcloud/files/roles/galera/galera.yml
+++ b/plugins/tripleo-overcloud/files/roles/galera/galera.yml
@@ -25,3 +25,4 @@ galera_role:
         - OS::TripleO::Services::TripleoFirewall
         - OS::TripleO::Services::SensuClient
         - OS::TripleO::Services::FluentdClient
+        - OS::TripleO::Services::MySQLClient
