--- a/plugins/tripleo-overcloud/files/roles/messaging/controller.yml
+++ b/plugins/tripleo-overcloud/files/roles/messaging/controller.yml
@@ -45,6 +45,7 @@ controller_role:
         - OS::TripleO::Services::NovaScheduler
         - OS::TripleO::Services::NovaConsoleauth
         - OS::TripleO::Services::NovaVncProxy
+        - OS::TripleO::Services::NovaPlacement
         - OS::TripleO::Services::Ntp
         - OS::TripleO::Services::SwiftProxy
         - OS::TripleO::Services::SwiftStorage
@@ -82,3 +83,4 @@ controller_role:
         - OS::TripleO::Services::SensuClient
         - OS::TripleO::Services::FluentdClient
         - "{% if install.version |int < 11 %}OS::TripleO::Services::VipHosts{% endif %}"
+        - OS::TripleO::Services::MySQLClient
