--- a/plugins/tripleo-overcloud/files/roles/messaging/messaging.yml
+++ b/plugins/tripleo-overcloud/files/roles/messaging/messaging.yml
@@ -25,3 +25,4 @@ messaging_role:
         - OS::TripleO::Services::TripleoFirewall
         - OS::TripleO::Services::SensuClient
         - OS::TripleO::Services::FluentdClient
+        - OS::TripleO::Services::MySQLClient
