--- a/plugins/tripleo-overcloud/files/roles/messaging/controller.yml
+++ b/plugins/tripleo-overcloud/files/roles/messaging/controller.yml
@@ -45,6 +45,7 @@ controller_role:
         - OS::TripleO::Services::NovaScheduler
         - OS::TripleO::Services::NovaConsoleauth
         - OS::TripleO::Services::NovaVncProxy
+        - OS::TripleO::Services::NovaPlacement
         - OS::TripleO::Services::Ntp
         - OS::TripleO::Services::SwiftProxy
         - OS::TripleO::Services::SwiftStorage
