Add possibility to install rally plugins with rally
I have my own external rally plugins I would like to us while
testing with Infrared and its rally plugin possibility, It used
to be there in IRv1 so I am readding it

Change-Id: I805ca69133039b9f94df99f921d03d70d6ab0462

--- a/plugins/rally/tasks/setup_rally.yml
+++ b/plugins/rally/tasks/setup_rally.yml
@@ -22,6 +22,13 @@
       version: "{{ test.git.revision }}"
       dest: "{{ rally.dir }}"
 
+- name: Clone Rally-Plugins git repo
+  git:
+      repo: "{{ test.git.plugins.repo }}"
+      version: "{{ test.git.plugins.revision }}"
+      dest: "~/.rally/plugins"
+  when: test.git.plugins.repo is defined
+
 - name: Run Rally installation script
   shell: "{{ rally.dir }}/install_rally.sh -v -y -d {{ rally.path }} | tee {{ rally.dir }}/rally_install.log"
   args:
