tempest: release-based dependencies for the general setup
Add support for Tempest dependencies which are specific to certain
OpenStack release.

Change-Id: Id8fcdc903dc173fef61dd15c61e2d4d3fc156fdc

--- a/plugins/tempest/tasks/setup/rpm/main.yml
+++ b/plugins/tempest/tasks/setup/rpm/main.yml
@@ -41,4 +41,10 @@
   package:
       name: "{{ item }}"
       state: present
-  with_items: "{{ setup.dependencies }}"
+  with_items: "{{ setup.dependencies[test.openstack.version]|default(setup.dependencies.default) }}"
+  when: test.openstack.version|int >= 7
+
+- name: Warning message
+  debug:
+      msg: WARNING! Plugins are not available for RHOS version < 7
+  when: test.openstack.version|int < 7
