--- a/plugins/tempest/vars/setup/pip.yml
+++ b/plugins/tempest/vars/setup/pip.yml
@@ -1,5 +1,4 @@
 setup:
-
     packages:
         - gcc
         - git
@@ -16,14 +15,28 @@ setup:
         - unittest2
         - nose
     dependencies:
-        - python-heat-tests
-        - python-ceilometer-tests
-        - python-keystone-tests
-        - python-aodh-tests
-        - python-neutron-tests
-        - python-neutron-fwaas-tests
-        - python-cinder-tests
-        - python-gabbi
-        - python-zaqar-tests
-        - python-ironic-tests
-        - python-mistral-tests
+        '9':
+            - python-heat-tests
+            - python-ceilometer-tests
+            - python-keystone-tests
+            - python-aodh-tests
+            - python-neutron-tests
+            - python-neutron-fwaas-tests
+            - python-cinder-tests
+            - python-gabbi
+            - python-zaqar-tests
+            - python-ironic-tests
+            - python-mistral-tests
+        '10':
+            - python-heat-tests
+            - python-ceilometer-tests
+            - python-keystone-tests
+            - python-aodh-tests
+            - python-neutron-tests
+            - python-neutron-fwaas-tests
+            - python-cinder-tests
+            - python-gabbi
+            - python-zaqar-tests
+            - python-ironic-tests
+            - python-mistral-tests
+        defaults: []
