--- a/plugins/tempest/vars/setup/rpm.yml
+++ b/plugins/tempest/vars/setup/rpm.yml
@@ -1,13 +1,27 @@
 setup:
     dependencies:
-        - python-heat-tests
-        - python-ceilometer-tests
-        - python-keystone-tests
-        - python-aodh-tests
-        - python-neutron-tests
-        - python-neutron-fwaas-tests
-        - python-cinder-tests
-        - python-gabbi
-        - python-zaqar-tests
-        - python-ironic-tests
-        - python-mistral-tests
+        '9':
+            - python-heat-tests
+            - python-ceilometer-tests
+            - python-keystone-tests
+            - python-aodh-tests
+            - python-neutron-tests
+            - python-neutron-fwaas-tests
+            - python-cinder-tests
+            - python-gabbi
+            - python-zaqar-tests
+            - python-ironic-tests
+            - python-mistral-tests
+        '10':
+            - python-heat-tests
+            - python-ceilometer-tests
+            - python-keystone-tests
+            - python-aodh-tests
+            - python-neutron-tests
+            - python-neutron-fwaas-tests
+            - python-cinder-tests
+            - python-gabbi
+            - python-zaqar-tests
+            - python-ironic-tests
+            - python-mistral-tests
+        defaults: []
