tempest: release-based dependencies for the general setup
Add support for Tempest dependencies which are specific to certain
OpenStack release.

Change-Id: Id8fcdc903dc173fef61dd15c61e2d4d3fc156fdc

--- a/plugins/tempest/vars/setup/rpm.yml
+++ b/plugins/tempest/vars/setup/rpm.yml
@@ -1,13 +1,15 @@
 setup:
     dependencies:
-        - python-heat-tests
-        - python-ceilometer-tests
-        - python-keystone-tests
-        - python-aodh-tests
-        - python-neutron-tests
-        - python-neutron-fwaas-tests
-        - python-cinder-tests
-        - python-gabbi
-        - python-zaqar-tests
-        - python-ironic-tests
-        - python-mistral-tests
+        '7': []
+        defaults:
+            - python-heat-tests
+            - python-ceilometer-tests
+            - python-keystone-tests
+            - python-aodh-tests
+            - python-neutron-tests
+            - python-neutron-fwaas-tests
+            - python-cinder-tests
+            - python-gabbi
+            - python-zaqar-tests
+            - python-ironic-tests
+            - python-mistral-tests
