--- a/plugins/tempest/tasks/setup/pip/main.yml
+++ b/plugins/tempest/tasks/setup/pip/main.yml
@@ -49,7 +49,7 @@
   package:
       name: "{{ item }}"
       state: present
-  with_items: "{{ setup.dependencies }}"
+  with_items: "{{ setup.dependencies[openstack.version]|default(setup.dependencies.default) }}"
 
 - name: Warning message
   debug:
