tempest: release-based package names
Allows user to define specific package names for each version
(with a default). The value should exist (i.e. the test suite should
not be called when the RPM does not exist).

Change-Id: If3bfd1071bb190b52495d539e2c7fdbd953a4e73

--- a/plugins/tempest/vars/tests/data_processing.yml
+++ b/plugins/tempest/vars/tests/data_processing.yml
@@ -6,4 +6,5 @@ test_dict:
     plugins:
       sahara-tests:
         repo: "https://github.com/openstack/sahara-tests"
-        package: "python-sahara-tests-tempest"
+        package:
+            default: "python-sahara-tests-tempest"
