--- a/plugins/tempest/vars/tests/ironic.yml
+++ b/plugins/tempest/vars/tests/ironic.yml
@@ -6,7 +6,8 @@ test_dict:
     plugins:
       ironic_tests:
         repo: "https://github.com/openstack/ironic.git"
-        package: "python-ironic-tests"
+        package:
+            default: "python-ironic-tests"
         dependencies:
           - postgresql-devel
           - libjpeg-devel
