--- a/plugins/tempest/vars/tests/neutron.yml
+++ b/plugins/tempest/vars/tests/neutron.yml
@@ -36,7 +36,9 @@ test_dict:
     plugins:
         neutron:
             repo: "https://github.com/openstack/neutron.git"
-            package: "python-neutron-tests"
+            package:
+                default: "python-neutron-tests"
         neutron_lbaas:
             repo: "https://github.com/openstack/neutron-lbaas.git"
-            package: "python-neutron-lbaas-tests"
+            package:
+                default: "python-neutron-lbaas-tests"
