tempest: release-based package names
Allows user to define specific package names for each version
(with a default). The value should exist (i.e. the test suite should
not be called when the RPM does not exist).

Change-Id: If3bfd1071bb190b52495d539e2c7fdbd953a4e73

--- a/plugins/tempest/vars/tests/ironic.yml
+++ b/plugins/tempest/vars/tests/ironic.yml
@@ -6,7 +6,8 @@ test_dict:
     plugins:
       ironic_tests:
         repo: "https://github.com/openstack/ironic.git"
-        package: "ironic_tempest_plugin/tests/scenario"
+        package:
+            default: "python-ironic-tests"
         dependencies:
           - postgresql-devel
           - libjpeg-devel
