tempest: release-based package names
Define specific package names for each version (with a default).
Not all plugins have been always available in all OpenStack releases,
and not always in the same package.

Change-Id: If3bfd1071bb190b52495d539e2c7fdbd953a4e73

--- a/plugins/tempest/vars/tests/data_processing.yml
+++ b/plugins/tempest/vars/tests/data_processing.yml
@@ -6,4 +6,8 @@ test_dict:
     plugins:
       sahara-tests:
         repo: "https://github.com/openstack/sahara-tests"
-        package: "python-sahara-tests-tempest"
+        package:
+            7: ""
+            8: ""
+            9: ""
+            default: "python-sahara-tests-tempest"
