--- a/plugins/tempest/vars/tests/ironic.yml
+++ b/plugins/tempest/vars/tests/ironic.yml
@@ -6,7 +6,11 @@ test_dict:
     plugins:
       ironic_tests:
         repo: "https://github.com/openstack/ironic.git"
-        package: "ironic_tempest_plugin/tests/scenario"
+        package:
+            7: ""
+            8: ""
+            9: ""
+            default: "python-ironic-tests"
         dependencies:
           - postgresql-devel
           - libjpeg-devel
