--- a/plugins/tempest/vars/tests/odl10.yml
+++ b/plugins/tempest/vars/tests/odl10.yml
@@ -45,3 +45,5 @@ test_dict:
     neutron:
         repo: "https://github.com/openstack/neutron.git"
         version: "stable/newton"
+        package:
+            default: ""
