--- a/plugins/tempest/vars/tests/ironic_inspector.yml
+++ b/plugins/tempest/vars/tests/ironic_inspector.yml
@@ -6,10 +6,19 @@ test_dict:
     plugins:
       ironic_inspector_tests:
         repo: "https://github.com/openstack/ironic-inspector.git"
-        package: "ironic_inspector/test/inspector_tempest_plugin/tests"
+        package:
+            7: ""
+            8: ""
+            9: ""
+            10: ""
+            default: "python-ironic-inspector-tests"
         dependencies:
           - postgresql-devel
           - libjpeg-devel
       ironic_tests:
         repo: "https://github.com/openstack/ironic.git"
-        package: "ironic_tempest_plugin/tests/scenario"
+        package:
+            7: ""
+            8: ""
+            9: ""
+            default: "python-ironic-tests"
