tempest: release-based package names
Define specific package names for each version (with a default).
Not all plugins have been always available in all OpenStack releases,
and not always in the same package.

Change-Id: If3bfd1071bb190b52495d539e2c7fdbd953a4e73

--- a/plugins/tempest/tasks/setup/rpm/install_plugins.yml
+++ b/plugins/tempest/tasks/setup/rpm/install_plugins.yml
@@ -5,6 +5,6 @@
 - name: Install plugin packages for "{{ test_suite }}" suite
   become: yes
   package:
-      name: "{{ item.value.package }}"
+      name: "{{ item.value.package[openstack.version]|default(item.value.package.default) }}"
       state: present
   with_dict: "{{ test_dict.plugins | default({}) }}"
