Disable tempest plugins installation till RHOS-9
* As openstack-tempest rpm bundles the tempest plugins till rhos-9
  so it does not make sense to install it again.

Change-Id: I042c7104b85ab8c85d422d839dd5533d23ca525c

--- a/plugins/tempest/tasks/setup/rpm/main.yml
+++ b/plugins/tempest/tasks/setup/rpm/main.yml
@@ -42,3 +42,9 @@
       name: "{{ item }}"
       state: present
   with_items: "{{ setup.dependencies }}"
+  when: test.openstack.version|int >= 10
+
+- name: Warning message
+  debug:
+      msg: WARNING! Plugins are installed by openstack-tempest rpm.
+  when: test.openstack.version|int < 10
