--- a/plugins/tempest/tasks/setup/rpm/main.yml
+++ b/plugins/tempest/tasks/setup/rpm/main.yml
@@ -41,7 +41,7 @@
   package:
       name: "{{ item }}"
       state: present
-  with_items: "{{ setup.dependencies[test.openstack.version]|default(setup.dependencies.default) }}"
+  with_items: "{{ setup.dependencies[test.openstack.version]|default(setup.dependencies.defaults) }}"
   when: test.openstack.version|int >= 7
 
 - name: Warning message
