--- a/plugins/packstack/configure_services_post_install.yml
+++ b/plugins/packstack/configure_services_post_install.yml
@@ -163,7 +163,7 @@
   become: yes
   any_errors_fatal: true
   vars_files:
-      - "vars/network/service/{{ install.network.service }}.yml"
+      - "{{ install.network.service }}"
   tasks:
       - name: Enable l3-ha (VRRP) in neutron
         ini_file:
