--- a/plugins/packstack/install.yml
+++ b/plugins/packstack/install.yml
@@ -6,8 +6,8 @@
   any_errors_fatal: true
   vars_files:
       - vars/network/common/3_nics_common.yml
-      - "vars/network/service/{{ install.network.service }}.yml"
-      - "vars/network/variant/{{ install.network.variant }}.yml"
+      - "{{ install.network.service }}"
+      - "{{ install.network.variant }}"
   vars:
       basic_config:
           CONFIG_PROVISION_DEMO: n
