--- a/plugins/packstack/main.yml
+++ b/plugins/packstack/main.yml
@@ -4,5 +4,5 @@
 - include: install.yml
 - include: configure_services_post_install.yml
 - include: create_external_network.yml
-  when: install.network.service == 'neutron' and install.public.network
+  when: network_service_common.type == 'neutron' and install.public.network
   tags: public_network
