--- a/plugins/rally/main.yml
+++ b/plugins/rally/main.yml
@@ -25,7 +25,7 @@
           - six
   tasks:
       - name: Include image vars
-        include_vars: "vars/image/{{ test.image }}.yml"
+        include_vars: "{{ test.image }}"
         tags:
             - always
 
