--- a/plugins/ospdui/run.yml
+++ b/plugins/ospdui/run.yml
@@ -4,7 +4,11 @@
   any_errors_fatal: true
   tasks:
       - name: include tests suite var
-        include_vars: "vars/tests/{{ test.tests }}.yml"
+        include_vars: "{{ test.tests }}"
+
+      - name: set test suite name
+        set_fact:
+            test_suite: "{{ test.tests | basename | splitext | first }}"
 
       - name: install test runner
         pip:
@@ -29,7 +33,7 @@
         shell: |
             source .venv/bin/activate
             py.test -s {{ test_pattern }} \
-                --junit-xml={{ test.tests }}.xml
+                --junit-xml={{ test_suite }}.xml
         args:
             chdir: "{{ setup.ospdui.dir }}"
             executable: /bin/bash
@@ -38,7 +42,7 @@
 
       - name: fetch resulting file
         fetch:
-            src: "{{ setup.ospdui.dir }}/{{ test.tests }}.xml"
-            dest: "{{ inventory_dir }}/ospdui_results/{{ test.tests }}.xml"
+            src: "{{ setup.ospdui.dir }}/{{ test_suite }}.xml"
+            dest: "{{ inventory_dir }}/ospdui_results/{{ test_suite }}.xml"
             flat: yes
             fail_on_missing: yes
