--- a/plugins/tempest/main.yml
+++ b/plugins/tempest/main.yml
@@ -24,6 +24,6 @@
         include: "tasks/run_suite.yml"
         with_items: "{{ test.tests }}"
         loop_control:
-            loop_var: test_suite
+            loop_var: test_suite_file
         tags:
             - run
