--- a/plugins/tempest/tasks/setup/rpm/install_plugins.yml
+++ b/plugins/tempest/tasks/setup/rpm/install_plugins.yml
@@ -1,6 +1,6 @@
 ---
 - name: Include test vars
-  include_vars: "vars/tests/{{ test_suite }}.yml"
+  include_vars: "{{ test_suite }}"
 
 - name: Install plugin packages for "{{ test_suite }}" suite
   become: yes
