--- a/plugins/rally/tasks/run.yml
+++ b/plugins/rally/tasks/run.yml
@@ -14,7 +14,7 @@
 
 - name: Copy Task file from vars
   template:
-      src: "vars/tests/{{ test.tests }}.yml"
+      src: "{{ test.tests }}"
       dest: "{{ rally.dir }}/{{ test.taskfile }}"
       force: yes
 
