--- a/plugins/tempest/tasks/setup/git/install_plugins.yml
+++ b/plugins/tempest/tasks/setup/git/install_plugins.yml
@@ -1,8 +1,8 @@
 ---
 - name: Include test vars
-  include_vars: "vars/tests/{{ test_suite }}.yml"
+  include_vars: "{{ test_suite_file }}"
 
-- name: Set plugins list iterator for "{{ test_suite }}"
+- name: Set plugins list iterator for "{{ test_suite_file }}"
   set_fact:
       plugins: "{{ test_dict.plugins | default({}) }}"
       plugins_dir: "{{ ('~/' + test.dir) | dirname }}/plugins"
