--- a/plugins/tempest/tasks/setup/rpm/main.yml
+++ b/plugins/tempest/tasks/setup/rpm/main.yml
@@ -21,7 +21,7 @@
   include: install_plugins.yml
   with_items: "{{ test.tests }}"
   loop_control:
-      loop_var: test_suite
+      loop_var: test_suite_file
 
 - name: Install junitxml
   become: yes
