--- a/plugins/ospdui/run.yml
+++ b/plugins/ospdui/run.yml
@@ -2,9 +2,11 @@
   hosts: tester
   gather_facts: no
   any_errors_fatal: true
+  vars:
+      test_suite: "{{ test.tests | basename | splitext | first }}"
   tasks:
       - name: include tests suite var
-        include_vars: "vars/tests/{{ test.tests }}.yml"
+        include_vars: "{{ test.tests }}"
 
       - name: install test runner
         pip:
@@ -28,7 +30,7 @@
         shell: |
             source .venv/bin/activate
             py.test -s {{ test_pattern }} \
-                --junit-xml={{ test.tests }}.xml
+                --junit-xml={{ test_suite }}.xml
         args:
             chdir: "{{ setup.ospdui.dir }}"
             executable: /bin/bash
@@ -37,7 +39,7 @@
 
       - name: fetch resulting file
         fetch:
-            src: "{{ setup.ospdui.dir }}/{{ test.tests }}.xml"
-            dest: "{{ inventory_dir }}/ospdui_results/{{ test.tests }}.xml"
+            src: "{{ setup.ospdui.dir }}/{{ test_suite }}.xml"
+            dest: "{{ inventory_dir }}/ospdui_results/{{ test_suite }}.xml"
             flat: yes
             fail_on_missing: yes
