--- a/plugins/tempest/tasks/setup/pip/main.yml
+++ b/plugins/tempest/tasks/setup/pip/main.yml
@@ -41,7 +41,7 @@
   include: install_plugins.yml
   with_items: "{{ test.tests }}"
   loop_control:
-      loop_var: test_suite
+      loop_var: test_suite_file
   when: test.openstack.version|int >= 7
 
 - name: Install test dependency
