tempest cleanup command did not existed before 8
We will not try to save the openstack state for clenaup
before liberty.
The packaged tempest did not had this functionality before.

Change-Id: I103935f7dcde902f27d6acde287e2afbfaa91a97

--- a/plugins/tempest/tasks/configure/run.yml
+++ b/plugins/tempest/tasks/configure/run.yml
@@ -48,6 +48,7 @@
   args:
       executable: /bin/bash
       chdir: "{{ test.dir }}"
+  when: test.openstack.version|int > 7 or test.setup != 'rpm'
 
 
 - name: Print configuration cmd
