Fix the package names for Ironic-related test suites
The package: field specify the name of a package, not a directory.

Change-Id: I355de5c94bf185149ca0457da8536cdc454ec82d

--- a/plugins/tempest/vars/tests/ironic_inspector.yml
+++ b/plugins/tempest/vars/tests/ironic_inspector.yml
@@ -6,10 +6,10 @@ test_dict:
     plugins:
       ironic_inspector_tests:
         repo: "https://github.com/openstack/ironic-inspector.git"
-        package: "ironic_inspector/test/inspector_tempest_plugin/tests"
+        package: "python-ironic-inspector-tests"
         dependencies:
           - postgresql-devel
           - libjpeg-devel
       ironic_tests:
         repo: "https://github.com/openstack/ironic.git"
-        package: "ironic_tempest_plugin/tests/scenario"
+        package: "python-ironic-tests"
