Use extra repo on 7 branches
os-testr is not part of the 7 release,
lets enable an internal repo
and os-testr as a dependency.

Change-Id: I0fe8c8442f5ef6b4b5b408370d77f0e802460561

--- a/plugins/tempest/vars/setup/rpm.yml
+++ b/plugins/tempest/vars/setup/rpm.yml
@@ -1,5 +1,7 @@
 setup:
     dependencies:
+         '7':
+            - python-os-testr
         '10':
             - python-heat-tests
             - python-ceilometer-tests
