Default to python2 in tox
python3 is not fully supported, and
if you are using python3-tox the default
python3 will not work properly.

If I would define the basepython in the
testenv section, it would be applied to py35
as well.

Change-Id: I22cc6f4825719f43ee5d96323032de6ea92e73ab

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ commands =
 sitepackages = True
 
 [testenv:ansible-lint]
+basepython = python2
 
 # ANSIBLE0002: Trailing whitespace
 #   There should not be any trailing whitespace
@@ -62,6 +63,7 @@ commands = bash -c "find plugins -type f -name '*.y*ml' -print0 | xargs -I FILE 
 whitelist_externals = bash
 
 [testenv:any-errors-fatal]
+basepython = python2
 deps =
 commands = bash -c "find plugins -type f -name '*.y*ml' | ./tox-check-any_errors_fatal.py -v -"
 whitelist_externals = bash
@@ -76,6 +78,7 @@ show-source = True
 exclude = .git,.venv,.tox,dist,docs,*egg,library
 
 [testenv:docs]
+basepython = python2
 deps = -r{toxinidir}/docs/requirements.txt
 whitelist_externals =
     /bin/bash
@@ -83,6 +86,7 @@ whitelist_externals =
 commands = bash -c 'cd docs; make clean; make html'
 
 [testenv:cli]
+basepython = python2
 deps = {toxinidir}
 install_command = pip install {packages}
 commands = infrared plugin add all
