Default to python2 in tox
python3 is not fully supported and
if you are using python3-tox the default
python3 will not work properly.

Change-Id: I22cc6f4825719f43ee5d96323032de6ea92e73ab

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ skipsdist = True
 envlist = py27,pep8,py35,ansible-lint,any-errors-fatal,cli
 
 [testenv]
+basepython = python2
 usedevelop = True
 # The tests should do more mocking instead of touching the fs espacially the $HOME
 setenv =
@@ -17,6 +18,7 @@ commands =
     flake8 {posargs}
 
 [testenv:py35]
+basepython = python3.5
 # You need to install selinux from a package now
 sitepackages = True
 
