Skip patched_rpms repo removal
Used for injecting RPMs to overcloud images and use them as part
of the undercloud installation process.

Change-Id: Ia05fd3349492b8ed3afbc3ccce93ccb764294d04

--- a/plugins/tripleo-overcloud/roles/rhos-release/tasks/main.yml
+++ b/plugins/tripleo-overcloud/roles/rhos-release/tasks/main.yml
@@ -39,6 +39,7 @@
       state: absent
       path: "{{ item.path }}"
   with_items: "{{ files_to_remove.files|default([]) }}"
+  when: item.path != '/etc/yum.repos.d/patched_rpms.repo'
   become: true
 
 - name: get the rhos-release RPM
