--- a/plugins/tempest/tasks/setup/rpm/main.yml
+++ b/plugins/tempest/tasks/setup/rpm/main.yml
@@ -37,6 +37,7 @@
       state: present
 
 - name: Enable extra repo
+  become: yes
   shell: yum-config-manager --enable rhelosp-7.0-unittest
   when: test.openstack.version|int == 7
 
