Use plain testr with rhos-7
The scripts what we had at those ages
are very different to the ones what we are using today,
this change does not implements skipfile (blacklist file)
support for 7.

Unfortunately rhos-7 tempest-lib conflicts ostestr,
if consider all sensible version.

Change-Id: I12ad7ffd01b6fa127c7d2a05667829bdc594b4a2

--- a/plugins/tempest/vars/setup/rpm.yml
+++ b/plugins/tempest/vars/setup/rpm.yml
@@ -1,7 +1,7 @@
 setup:
     dependencies:
         '7':
-            - python-os-testr
+            - python-oslotest
         '10':
             - python-heat-tests
             - python-ceilometer-tests
