Use plain testr with rhos-7
The scripts what we had at those ages
are very different to the ones what we are using today,
this change does not implements skipfile (blacklist file)
support for 7.

Unfortunately rhos-7 tempest-lib conflicts ostestr,
if consider all sensible version.

Change-Id: I12ad7ffd01b6fa127c7d2a05667829bdc594b4a2

--- a/plugins/tempest/tasks/run_suite.yml
+++ b/plugins/tempest/tasks/run_suite.yml
@@ -61,6 +61,19 @@
             executable: /bin/bash
             chdir: "{{ test.dir }}"
         ignore_errors: true
+        when: test.openstack.version|int != 7 or test.setup != 'rpm'
+
+      - name: run tempest "{{ test_suite }}" suite 7
+        shell: |
+            set -x
+            echo "Warning test black listing is not implemented"
+            test -e "{{ test.dir }}.testrepository" || testr init
+            testr run --subunit '{{ regex | default('') }}' | subunit2junitxml --output-to={{ test_output_file }}
+        args:
+            executable: /bin/bash
+            chdir: "{{ test.dir }}"
+        ignore_errors: true
+        when: test.openstack.version|int == 7 and test.setup == 'rpm'
 
       - name: inject the test suite name to the XML name atribute
         command: "sed '/^<testsuite/s/name=\"\"/name=\"{{ test_suite }}\"/' -i {{ test_output_file }}"
