Fix loadbalancer deployment
Ensures that loadbalancer templates are included to the
 deploy script.

Change-Id: I32d98f07f60a4066b541174fc1873376f3201033

--- a/playbooks/installer/ospd/overcloud/append_script.yml
+++ b/playbooks/installer/ospd/overcloud/append_script.yml
@@ -32,6 +32,10 @@
       line: '-e {{ item.path }} \'
   with_items: "{{ template_list.files }}"
 
+- name: append loadbalancer templates
+  include: loadbalancer.yml
+  when: "groups.loadbalancer is defined"
+
 - name: Append the invocation line to the base overcloud deploy script
   lineinfile:
       dest: "~/overcloud_deploy.sh"
