make tox -e py.. accept posargs for py.test
This allows execution of limited set of test cases, e.g.:

  tox -e py27 -- -k interactive_ssh

Change-Id: Ibe4baf8ea03d0b11913cef56b017b7ff70058460

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,10 @@
 skipsdist = True
 envlist = py27,pep8,py35,ansible-lint,any-errors-fatal,cli
 
+# info: to run individual tests/ testcase,
+# you can provide extra '-k' argument to py.test like:
+#  $ tox -e py27 -- -k interactive
+
 [testenv]
 usedevelop = True
 # The tests should do more mocking instead of touching the fs espacially the $HOME
@@ -9,7 +13,7 @@ setenv =
   CCACHE_DIR={env:HOME}/.ccache
   HOME={envdir}/fishfish
 deps = -r{toxinidir}/test-requirements.txt
-commands = python -m pytest tests
+commands = python -m pytest tests/ {posargs}
 
 [testenv:pep8]
 deps = hacking<0.11,>=0.10.0
