Ensure vms are sshable before trying to create users there.
Change-Id: I8a86dfe661c099459c91bfd37fed237596513cec

--- a/plugins/virsh/provision_user.yml
+++ b/plugins/virsh/provision_user.yml
@@ -15,6 +15,15 @@
       delegate_to: hypervisor
       tags: vms
 
+    - name: get root's id
+      shell: |
+           id root
+      register: tmp_info
+      until: tmp_info.rc == 0
+      retries: 3
+      delay: 15
+      ignore_errors: True
+
     - name: create non root user
       user:
           name: "{{ provision.topology.username }}"
