--- a/plugins/tempest/vars/setup/git.yml
+++ b/plugins/tempest/vars/setup/git.yml
@@ -1,6 +1,7 @@
 setup:
     repo: https://github.com/redhat-openstack/tempest.git
-
+    tempest_version: {5:'icehouse', 6:'juno', 7:'kilo', 8:'liberty',
+                      9:'mitaka', 10:'newton'}
     packages:
         - gcc
         - git
