Quote varaibles in the tempest config
Making the variables in 'Run tempest configuration tool',
quoted. This change does not solves every possible
escaping issue, for example when the `value` has "'",
but it is more resitant for threats then the prev version.

Change-Id: I316439bd395c8d071328a8f70b5b5826cf2c9397

--- a/plugins/tempest/tasks/configure/run.yml
+++ b/plugins/tempest/tasks/configure/run.yml
@@ -21,21 +21,21 @@
       source ~/keystonerc
       {{ config_command | default("tools/config_tempest.py") }} \
               {% if deployer_input_stat.stat.exists %}
-              --deployer-input {{ deployer_input }} \
+              --deployer-input '{{ deployer_input }}' \
               {% endif %}
               --debug \
               -v \
               --create \
-              identity.uri $OS_AUTH_URL \
-              identity.admin_password $OS_PASSWORD \
-              scenario.img_dir ~/{{ test.dir }}/etc \
+              identity.uri "$OS_AUTH_URL" \
+              identity.admin_password "$OS_PASSWORD" \
+              scenario.img_dir '~/{{ test.dir }}/etc' \
               {# config options #}
               {% for section_name,options in config_options.iteritems() %}
               {% for option_name,value in options.iteritems() %}
-              {{section_name}}.{{option_name}} {{value}} \
+              '{{section_name}}.{{option_name}}' '{{value}}' \
               {% endfor %}
               {% endfor %}
-              --out ~/{{ test.dir }}/etc/tempest.conf
+              --out '~/{{ test.dir }}/etc/tempest.conf'
   args:
       chdir: "{{ config_dir | default('~/' + test.dir) }}"
   register: config_result
