[Bugfix] Fix pbr dependency causing pip issues again (ironic)
Looks like we also need to downgrade ironics's client to < 1.12.0
to be able to build IR's pip dependency tree nowadays. Looks like
old shade issue again.

Change-Id: Id8e7338527f4b68cbfc521510fb0981fd5318e76

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ shade==1.7.0
 # pin shade req
 python-openstackclient==3.8.1
 python-cinderclient==1.11.0
+python-ironicclient==1.11.1
 openstacksdk == 0.9.13
 stevedore == 1.20.0
 oslo.config == 3.22.0
