Added test for python dependency conflicts
Change-Id: Ibf132287880768cf23e953d530fb231b0a2abe1c
Signed-off-by: Sorin Sbarnea <ssbarnea@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
+minversion = 2.3.1
 skipsdist = True
-envlist = py27,pep8,py35,ansible-lint,any-errors-fatal,cli
+envlist = py27,pep8,py35,ansible-lint,any-errors-fatal,cli,conflicts
 
 [testenv]
 basepython = python2
@@ -11,6 +12,20 @@ setenv =
   HOME={envdir}/fishfish
 deps = -r{toxinidir}/test-requirements.txt
 commands = python -m pytest tests
+
+[testenv:conflicts]
+# this is an essential type of test that validates that installing infrared
+# does not infroduce conflicts in python installed packages.
+# This must work for both cases: installing with/without --upgrade
+deps =
+commands =
+     pip install 'pip>=9.0.1'
+     - pip check
+     pip install -e .
+     pip check
+     pip uninstall -y infrared
+     pip install --upgrade -e .
+     pip check
 
 [testenv:pep8]
 deps = hacking<0.11,>=0.10.0
