Workaround for pip dependency conflicts
Change-Id: Iaed5dbedeb07689ec0cebb2cbbc90d80dd7d33ca
Signed-off-by: Sorin Sbarnea <ssbarnea@redhat.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ shade==1.7.0
 python-openstackclient==3.8.1
 python-cinderclient==1.11.0
 python-ironicclient==1.11.1
+python-keystoneclient>=3.8.0 # from python-openstackclient 3.8.1
+python-novaclient!=7.0.0,>=6.0.0 # from python-openstackclient 3.8.1
 openstacksdk == 0.9.13
 stevedore == 1.20.0
 oslo.config == 3.22.0
